--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ author: hiXing
 url: https://hixing.github.io/
 resume_site: https://hixing.github.io/
 github: https://github.com/hiXing/
-baseurl: "/LessOrMore"
+### baseurl修改为项目名，如果项目是'***.github.io'，则设置为空''
+baseurl: ''
 description: Actually, less is more!
 meta_description: 嗨_星;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: It's our wits that make us men.
