--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-name: 我的 个人博客
+name: 我的  World
 email: dreamerzhx@163.com
 author: hiXing
-url: https://hixing.github.io/
-resume_site: https://hixing.github.io/
+url: https://hiXing.github.io/
+resume_site: https://hiXing.github.io/
 github: https://github.com/hiXing/
 ### baseurl修改为项目名，如果项目是'***.github.io'，则设置为空''
 baseurl: ''
 description: Actually, less is more!
 meta_description: 嗨_星;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: It's our wits that make us men.
-banner: 学而不思则罔，思而不学则殆。
+banner: 这场无情的战争，只许成功不许失败！
 
 #permalink: /:categories/:year/:month/:day/:title/
 permalink: /:year/:month/:day/:title/
